# MicroCpy

./: .augmentignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMANDS_REFERENCE.md  COMMIT_MSG.txt  Dockerfile.backend  ECOSYSTEM_GUI_SETUP.md  FILES_CREATED.md  FINAL_SUMMARY.md  FIRST_STEPS.md  GENE_NETWORK_GUIDE.md  GUI_TESTING_STEPS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MASTER_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  README_ECOSYSTEM_TESTING.md  START_HERE.md  SUB_WORKFLOW_GUIDE.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  add_custom_functions_to_configs.py  analyze_cells.py  debug_fipy_reactions.py  debug_gene_interface.py  debug_gene_network.py  debug_microc_gene_states.py  debug_microc_vs_standalone.py  debug_simulation_gene_states.py  docker-compose.yml  fix_multitest_concentrations.py  install.bat  install.sh  log_simulation_status.txt  oxygen_off_test.txt  (+13 more)
microc-2.0/: .gitignore  BIOCELL_SIZE_VTK_EXPORT_FEATURE.md  CLEANUP_SUMMARY.md  COMPLETE_GENE_NETWORK_INTEGRATION.md  COORDINATE_SYSTEM_FIX.md  CSV_2D_INTEGRATION_SUMMARY.md  CSV_EXPORT_AND_DECOUPLED_PLOTTING_SUMMARY.md  FIPY_H5_READER_DOMAIN_FIX.md  GETTING_STARTED.md  H5_GENERATION_SEPARATION_SUMMARY.md  H5_GENERATOR_FIXES_SUMMARY.md  H5_REMOVAL_SUMMARY.md  HOW_TO_USE_RUN_MICROC.md  IMAGE_GENERATION_FIX.md  MASTER_RUNNER_CSV_PLOTTING_INTEGRATION.md  Makefile  OPTIMAL_METABOLIC_CONDITIONS.md  ORGANIZATION_IMPROVEMENTS_SUMMARY.md  README.md  README_gene_network_standalone.md  REPOSITORY_ORGANIZATION.md  SCIENTIFIC_REVIEW_MICROC_PYTHON.md  STANDALONE_SIMULATOR_SUMMARY.md  VISUALIZATION_FIX_SUMMARY.md  VTK_SUBSTANCE_FIELD_EXPORT_FEATURE.md  VTK_VOLUMETRIC_EXPORT_FEATURE.md  Z_SLICE_SELECTION_FEATURE.md  analyze_apoptosis_pathways.py  apoptosis_analysis_summary.md  bug_fix_evidence.py  corrected_mitoATP_test.txt  debug_gene_network.py  debug_gene_network_issues.py  debug_glut1.py  debug_lactate_instability.py  debug_lactate_production.py  debug_lactate_tracking.py  debug_logic_evaluation.py  debug_metabolism_direct.py  debug_microc_gene_states.py  (+64 more)
microc-2.0/benchmarks/: FipyTest.py  README.md  gene_network_standalone.py  gene_simulator.py  standalone_steadystate_fipy.py  standalone_steadystate_fipy_3D.py  standalone_steadystate_fipy_3D_h5_reader.py  standalone_steadystate_fipy_3D_vtk_reader.py  test_simple_inputs.txt
microc-2.0/debug/: analyze_apoptosis_pathways.py  analyze_cells.py  analyze_mct1_mitoatp.py  bug_fix_evidence.py  calc_microc_params.py  calculate_proper_oxygen_consumption.py  compare_results.py  debug_cell_propagation_order.py  debug_diffusion_fix.py  debug_gene_network_inputs.py  debug_gene_states.py  debug_main_simulation.py  debug_mct1_threshold.py  debug_microc_vs_standalone.py  debug_microc_vs_standalone_detailed.py  debug_oxygen_consumption.py  debug_oxygen_threshold.py  debug_volume_calculation.py  demonstrate_bug_fix.py  final_demonstration.py  quick_metabolism_test.py  quick_test.py  remove_special_chars.py  run_multitest_improved.py  simple_metabolism_test.py  simple_microc_test.py  standalone_lactate_fipy_test.py  standalone_steady_state_test.py  test_boolean_fix.py  test_cell_age_initialization.py  test_chessboard.py  test_fipy_equation_fix.py  test_gene_initialization_fix.py  test_gene_network_changes.py  test_gene_network_fix.py  test_gene_network_performance.py  test_gradient_boundaries.py  test_initial_state_integration.py  test_initial_state_system.py  test_jayatilake_fix.py  (+10 more)
microc-2.0/docs/: CHANGES_gene_network.py.md  CHANGES_population.py.md  CSV_INITIAL_STATE_FORMAT.md  DECORATOR_IMPLEMENTATION_SUMMARY.md  DECORATOR_REGISTRATION.md  FUNCTION_CODE_VIEWER_GUIDE.md  GUI_IMPLEMENTATION_GUIDE.md  GUI_MACROSTEP_INTEGRATION.md  GUI_STEPS_INTEGRATION.md  INITIAL_STATE_SYSTEM.md  MACROSTEP_STAGE.md  MicroC_GUI_Workflow_Building_Chapter.txt  SETUP_COMPLETE.md  WORKFLOW_ARCHITECTURE_SUMMARY.md  WORKFLOW_STEPS.md  assistant_chatlog.md  building_and_development.md  configuration_validation.md  custom_functions_and_gene_manipulation.md  gradient_boundary_conditions.md  running_simulations.md
microc-2.0/examples/: test_workflow_v2.json
(+1683 files in other folders)
